<resources>
    <string name="app_name">AmExer</string>


    <!--   ......................... LOG STRINGS ......................... -->
    <string name="actionBarEnabled">actionBarEnabled</string>
    <string name="actionBarDisabled">actionBarDisabled</string>


    <!--   ......................... OPEN CLOSE  ......................... -->
    <string name="wochenende">Wochenende</string>
    <string name="frei">Wir haben frei</string>
    <string name="offen_bis">Offen bis</string>
    <string name="wir_sehen_uns">Wir sind sehen uns um</string>
    <string name="zero_minute">:00</string>
    <string name="open">Offen</string>
    <string name="closed">Geschlossen</string>
    <string name="close">Schließen</string>


    <!--   ......................... ACTIVITY SUBNAMES ......................... -->
    <string name="afterSchool">Freizeit</string>
    <string name="dataCenter">Rechenzentrum</string>
    <string name="food">Essen</string>
    <string name="holidays">Vorlesungsfreie Zeiten</string>
    <string name="library">Bibliothek</string>
    <string name="maps">Karten</string>
    <string name="offices">Ämter und Büros</string>
    <string name="profs">Professoren</string>
    <string name="sports">Sportkurse</string>


    <!--   ......................... AFTER SCHOOL ......................... -->
    <string name="bars">Kneipen</string>
    <string name="clubs">Clubs</string>
    <string name="restaurants">Restaurants</string>

    <string name="barsLink">https://www.google.de/maps/search/Wolfenbuettel+Bars</string>
    <string name="clubsLink">https://www.google.de/maps/search/Wolfenbuettel+Clubs</string>
    <string name="restaurantsLink">https://www.google.de/maps/search/Wolfenbuettel+Restaurants</string>


    <!--   ......................... CAMPUSES  ......................... -->
    <string name="amExer">Am Exer</string>
    <string name="anDerSalzdahlumer">An der Salzdahlumer</string>
    <string name="campusExer">Campus am Exer</string>
    <string name="campusSalzdahlumer">Campus Salzdahlumer</string>


    <!--   ......................... FOOD ......................... -->
    <!-- Mensa -->
    <string name="mensa">Mensa</string>
    <string name="mensa_url">http://www.stw-on.de/wolfenbuettel/essen/menus/mensa-ostfalia</string>
    <string name="mensa_csv">mensa_data.csv</string>

    <!-- Solferino -->
    <string name="solferino">Solferino</string>
    <string name="solferino_limes_csv">solferino_limes_data.csv</string>

    <!-- Limes -->
    <string name="limes">Limes</string>
    <string name="limes_url">http://limes.dragosardo.de</string>


    <!--   ......................... HOLIDAYS  ......................... -->
    <string name="semesterBreak">Vorlesungsfrei</string>
    <string name="lectureTime">Kein vorlesungsfrei</string>
    <string name="holiday">Feiertag</string>
    <string name="date">Datum</string>
    <string name="holidays_data.csv">holidays_data.csv</string>


    <!--   ......................... LIBRARY  ......................... -->
    <string name="library_csv">semester_data.csv</string>


    <!--   ......................... MAPS ......................... -->
    <string name="exerMap">KarteExer</string>
    <string name="salzdahlumerMap">KarteSalzdahlumer</string>

    <string name="gebaudeExer">Gebäude am Exer:</string>
    <string name="gebaudeSalzdahlumer">Gebäude an der Salzdahlumer:</string>

    <string name="campus_exer_data.csv">campus_exer_data.csv</string>
    <string name="campus_salzdahlumer_data.csv">campus_salzdahlumer_data.csv</string>


    <!--   ......................... SPORTS ......................... -->
    <string name="profs.csv">profs.csv</string>

    <!--   ......................... SPORTS ......................... -->
    <string name="sports_data.csv">sports_data.csv</string>
    <string name="sportsLink">https://www.hochschulsport.ostfalia.de/angebote/aktueller_zeitraum/_</string>
    <string name="studienberatung">https://www.ostfalia.de/cms/de/studienberatung</string>
    <string name="studienforderung">https://www.ostfalia.de/cms/de/stipendien</string>
    <string name="service_bueros">https://www.ostfalia.de/cms/de/ssc/servicebueros/</string>
    <string name="career_service">https://www.ostfalia.de/cms/de/career</string>
    <string name="immatrikulations_buero">https://www.ostfalia.de/cms/de/ssc/immatrikulation/?nav2=true</string>
    <string name="international_office">https://www.ostfalia.de/cms/de/international/internationales_Buero_-_student_office</string>

</resources>
