<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.example.livruen.amexer.AmExer"
    android:background="#ffffff"
    android:gravity="fill_horizontal|fill_vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/food_button"
                android:cropToPadding="false"
                android:nestedScrollingEnabled="true"
                android:background="@mipmap/ic_food"
                android:clickable="true"
                android:layout_rowWeight="0.30"
                android:layout_columnWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/food" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/library_button"
                android:background="@mipmap/ic_library"
                android:clickable="true"
                android:layout_columnWeight="0.30"
                android:layout_rowWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/library" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/office_button"
                android:background="@mipmap/ic_offices"
                android:clickable="true"
                android:layout_columnWeight="0.30"
                android:layout_rowWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/offices"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/maps_button"
                android:background="@mipmap/ic_maps"
                android:clickable="true"
                android:layout_rowWeight="0.30"
                android:layout_columnWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/maps" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/holidays_button"
                android:background="@mipmap/ic_holidays"
                android:clickable="true"
                android:layout_rowWeight="0.30"
                android:layout_columnWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/holidays"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/data_center_button"
                android:background="@mipmap/ic_data_center"
                android:clickable="true"
                android:layout_rowWeight="0.30"
                android:layout_columnWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/dataCenter"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/sport_button"
                android:background="@mipmap/ic_sport"
                android:clickable="true"
                android:layout_columnWeight="0.30"
                android:layout_rowWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/sports" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/profs_button"
                android:background="@mipmap/ic_profs"
                android:clickable="true"
                android:layout_rowWeight="0.30"
                android:layout_columnWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profs"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/after_school_button"
                android:padding="0dp"
                android:background="@mipmap/ic_after_school"
                android:clickable="true"
                android:layout_rowWeight="0.30"
                android:layout_columnWeight="0.30"
                android:layout_weight="0.33"
                android:adjustViewBounds="true"
                android:contentDescription="@string/afterSchool"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
