<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".AfterSchool"
    android:background="#ffffff"
    android:gravity="center_vertical|center_horizontal">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_afterschool"
        android:background="@color/wolfenbuettelBlue"
        android:text="@string/afterSchool"
        android:focusable="false"
        android:textColor="#ffffff"
        android:inputType="none"
        android:gravity="center"
        android:layout_gravity="left|top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText_afterschool"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurants"
            android:id="@+id/buttonRestaurant"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:height="60dp"
            android:layout_below="@+id/buttonClubs"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clubs"
            android:id="@+id/buttonClubs"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:height="60dp"
            android:layout_below="@+id/buttonPubs"
            android:layout_alignLeft="@+id/buttonRestaurant"
            android:layout_alignStart="@+id/buttonRestaurant" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bars"
            android:id="@+id/buttonPubs"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_shape"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:width="200dp"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />
    </RelativeLayout>
</RelativeLayout>
