<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".ChooseCampus"
    android:background="#ffffff">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_choose_campus_food"
        android:background="@color/wolfenbuettelBlue"
        android:text="@string/food"
        android:focusable="false"
        android:textColor="#ffffff"
        android:inputType="none"
        android:gravity="center"
        android:layout_gravity="left|top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/editText_choose_campus_food">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/campusExer"
            android:layout_alignLeft="@+id/campusExer"
            android:layout_alignParentEnd="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campusExer"
                    android:id="@+id/campusExer"
                    android:layout_gravity="center"
                    android:background="@drawable/round_shape"
                    android:textColor="#ffffff"
                    android:textStyle="normal"
                    android:width="200dp"
                    android:elevation="10dp"
                    android:elegantTextHeight="true"
                    android:clickable="true"
                    android:focusableInTouchMode="true"

                    android:height="60dp"
                    android:layout_marginBottom="79dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/campusSalzdahlumer"
                    android:id="@+id/campusSalzdahlumer"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:background="@drawable/round_shape"
                    android:width="200dp"
                    android:textStyle="normal"
                    android:textColor="#ffffff"
                    android:elevation="10dp"
                    android:height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignLeft="@+id/campusExer"
                    android:layout_alignStart="@+id/campusExer" />
            </LinearLayout>
        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>
